# zoe

./: .gitignore  ARCHITECTURE.md  Caddyfile  Cargo.toml  ETHICS.md  IRON_PLAGUE.md  LICENSE  PANTHEON.md  PRISM.md  README.md  SCALE.md  ZOE.md  activate.sh  alpha-test.js  chat.html  daemon.js  expose.sh  feedback-results.json  go.html  index.html  infinite.html  insights.json  install.sh  loop-test.js  manifest.json  new.html  package-lock.json  package.json  server.js  shiva.py  start.sh  stop.sh  sw.js  test.js  version.json  vocab-test.js  z  zoe.js  zoe.py
atlas/: atlas.py
books/: current.txt
cosmos/: cosmos.py
css/: animations.css  components.css  layout.css  reset.css  theme.css  zoe.css
game/: GAME.md  index.html
js/: activity.js  api.js  app.js  constants.js  data.js  debug.js  errors.js  fragments.js  game.js  handlers.js  integrity.js  mind.js  observe.js  particles.js  state.js  ui.js  wave.js
knowledge/: quotes.json
phi/: phi.py
simplex/: ._agent.db  ._chat.db
src/: main.rs
static/: index.html
v2/: index.html  style.css  waiting.css
v2/js/: api.js  fragments.js  game.js  gate.js  input.js  main.js  particles.js  patterns.js  state.js  ui.js
v3/: index.html  style.css  zoe.js
v3/css/: base.css  chat.css  input.css  safety.css  zoe.css
v3/data/: patterns.json
v3/js/: app.js  input.js  patterns.js  respond.js  security.js  state.js  ui.js  zoe.js
worker/: feedback.js  zoe-brain.js
